Now offers a zip in the response, button that allows you to download after resize complete, added set_time_limit(0) to avoid timeouts.

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -57,7 +57,7 @@
     border-right: 1px solid #AAA;
 }
 
-.formatBox .save {
+.formatBox .button {
     display: block;
     float: right;
     padding: 5px;
@@ -73,7 +73,11 @@
     position: relative;
 }
 
-.formatBox .save:hover {
+.formatBox .button.download {
+    display: none;
+}
+
+.formatBox .button:hover {
     background-color: #EFEFEF;
     color: #333;
 }
